--- a/templates/regular_page.html.twig
+++ b/templates/regular_page.html.twig
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ path('classification') }}">Panel</a>
+                            <a class="nav-link" href="{{ path('classification_index') }}">Panel</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('classification_status') }}">Status</a>
