--- a/templates/classification/status.html.twig
+++ b/templates/classification/status.html.twig
@@ -25,14 +25,14 @@
                         <td>
                             {% if request.isPending %}
                                 <a class="badge badge-primary"
-                                   href="{{ path('classification_index', {'requestId': request.id}) }}"><i
+                                   href="{{ path('classification_index', {'requestId': request.id, 'query': query}) }}"><i
                                             class="fas fa-pen mr-1"></i> Classify</a>
                             {% elseif request.isProcessed %}
-                                <a class="small" href="{{ path('classification_index', {'requestId': request.id}) }}"
+                                <a class="small" href="{{ path('classification_index', {'requestId': request.id, 'query': query}) }}"
                                    title="Edit classification">{{ request.ad.keywords|keywords }}</a>
                             {% elseif request.isRejected %}
                                 <a class="badge badge-secondary"
-                                   href="{{ path('classification_index', {'requestId': request.id}) }}"
+                                   href="{{ path('classification_index', {'requestId': request.id, 'query': query}) }}"
                                    title="Edit classification"><i class="fas fa-pen mr-1"></i> Edit</a>
                             {% endif %}
                         </td>
@@ -54,6 +54,6 @@
                 The list of requests <b>is empty</b>.
             </div>
         {% endif %}
-        {% include 'utils/pagination.html.twig' with {'url': 'classification_status'} %}
+        {% include 'utils/pagination.html.twig' with {'url': 'classification_status', 'query': {'query': query}} %}
     </div>
 {% endblock %}
