--- a/templates/regular_page.html.twig
+++ b/templates/regular_page.html.twig
@@ -34,6 +34,12 @@
 {#                            </div>#}
 {#                        </li>#}
                     </ul>
+                    <nav class="navbar-nav p-0">
+                        <form class="form-inline my-2 my-lg-0" id="searchForm" action="{{ path('classification_search') }}">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" value="{{ query|default('') }}">
+                            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search mr-1"></i></button>
+                        </form>
+                    </nav>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
