Squashed commit of the following:
commit b0c4aa280107fdb581c94c62a2a6397a634e004a
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 10:33:49 2021 +0200

    Update configuration

commit 90db3628e49c895cdb593c7eb870e3c0a496da6a
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 10:19:34 2021 +0200

    Update configuration

commit 352e93cf72d935afde32b5a593ac62f449fd3e63
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 10:04:04 2021 +0200

    Update doctrine/doctrine-migrations-bundle recipe

commit 006ce8478687ba2645a1ab7a706009265d6ac47f
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 10:03:31 2021 +0200

    Update symfony/security-bundle recipe

commit d27d06768c2211cc6cad8c00ad296a4f14036fe6
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 09:56:13 2021 +0200

    Update symfony/routing recipe

commit c23a62018141ddd15528d7467834fc0dfda3846f
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 09:55:12 2021 +0200

    Update symfony/framework-bundle recipe

commit 4a8db8c7399d93993e09937f054e662e42b086f1
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 09:48:38 2021 +0200

    Update symfony/twig-bundle recipe

commit b970e017a827b435530ab44fe0f4b0842bfb4625
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 09:46:37 2021 +0200

    Update symfony/console recipe

commit ed23f530eb132224f0b30b5d349224711b020bfd
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 09:45:41 2021 +0200

    Update doctrine/doctrine-bundle recipe

commit a5965308e79ed96e805ea69b95130f87027c85b9
Author: Maciej Pilarczyk <m.pilarczyk@outlook.com>
Date:   Thu Jun 24 09:43:02 2021 +0200

    Upgrade to Symfony 5

--- a/templates/classification/status.html.twig
+++ b/templates/classification/status.html.twig
@@ -18,10 +18,10 @@
                 <tbody>
                 {% for request in requests %}
                     <tr>
-                        <th scope="row">{{ request.id }}</th>
-                        <td>{{ request.createdAt|date('Y-m-d H:m:s') }}</td>
-                        <td>{{ request.user.fullName }}</td>
-                        <td><code>{{ request.ad.checksum|hex }}</code></td>
+                        <th class="text-nowrap" scope="row">{{ request.id }}</th>
+                        <td class="text-nowrap">{{ request.createdAt|date('Y-m-d H:m:s') }}</td>
+                        <td class="text-nowrap">{{ request.user.fullName }}</td>
+                        <td class="text-nowrap"><code>{{ request.ad.checksum|hex }}</code></td>
                         <td>
                             {% if request.isPending %}
                                 <a class="badge badge-primary"
@@ -36,11 +36,11 @@
                                    title="Edit classification"><i class="fas fa-pen mr-1"></i> Edit</a>
                             {% endif %}
                         </td>
-                        <td>
+                        <td class="text-nowrap">
                             <span class="badge badge-rs{{ request.status }}"
                                   title="{{ request|requestStatus(true) }}">{{ request|requestStatus }}</span>
                         </td>
-                        <td>
+                        <td class="text-nowrap">
                             <span class="badge badge-rcs{{ request.callbackStatus }}"
                                   title="{{ request|callbackStatus(true) }}">{{ request|callbackStatus }}</span>
                         </td>
