--- a/templates/classification/index.html.twig
+++ b/templates/classification/index.html.twig
@@ -98,11 +98,10 @@
                                     <br />
                                     <code>{% if request.ad.size matches '/^\\d+x\\d+$/' %}iframe {% endif %}{{ request.ad.size }}</code>
                                 {% else %}
-                                    {% set scale = min(1.0, maxWidth/request.ad.width, maxHeight/request.ad.height) %}
                                     <div style="
                                             width: {{ request.ad.width }}px;
                                             height: {{ request.ad.height }}px;
-                                            transform:scale({{ scale }});
+                                            transform:scale({{ request.ad.getScale(maxWidth, maxHeight) }});
                                             ">
                                         {% if request.type == 'image' %}
                                             <img src="{{ request|image64(true) }}" border="0" alt=""/>
