--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="referrer" content="origin-when-cross-origin">
-    <title>{% block title %}{% endblock %}Adclassify</title>
+    <title>{% block title %}{% endblock %}{{ app.name }}</title>
     {% block stylesheets %}{% endblock %}
     <link rel="shortcut icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     {% block meta %}{% endblock %}
