--- a/templates/classification/index.html.twig
+++ b/templates/classification/index.html.twig
@@ -111,6 +111,12 @@
                                     <code><a href="{{ directUrl }}" target="_blank" rel="nofollow noreferrer noopener">{{ directUrl }}</a></code>
                                     <br />
                                     <code>{% if request.ad.size matches '/^\\d+x\\d+$/' %}iframe {% endif %}{{ request.ad.size }}</code>
+                                {% elseif request.type == 'model' %}
+                                    <div class="model-preview"
+                                         data-src="{{ request|video64(true) }}"
+                                         data-mime="{{ request.ad.mime }}"
+                                         style="width: 300px; height: 300px; background-color: #ed969e">
+                                    </div>
                                 {% else %}
                                     <div style="
                                             width: {{ request.ad.width }}px;
